R1.6.1     05/20/2022    Kukhee Kim
            - merge R1.5.4-br branch to pickup R1.5.4-1.0 and R1.5.4-2.0


R1.6.0      05/20/2022   Matt Weaver
            - increase control/experiment engines and reduce the bits each contributes to the timing frame
            - clean up un-necessary code and print out messages

R1.5.4-2.0  03/02/2022    Kukhee Kim
            bug fixing for insertionSequence()
            - finding a free sub-sequence index

R1.5.4-1.0  01/31/2022    Kukhee Kim
            read out destination rates
            branch out from R1.5.4


R1.5.4      10/10/2021    Matt Weaver
            Add modesel in hps_peek
            Print errors for failing sequence insertion
            Update mpssim_tse and reg_tst
            force tag to R1.5.4 10/16/2021 - print for all sequence insert errors          

R1.5.3      04/15/2021    Kukhee Kim
            add diagnostics for reference clock PLL

R1.5.2      04/09/2021    Kukhee Kim
            add JesdRx reset

R1.5.1      03/23/2021    Kukhee Kim
            add Beam Charge Override

R1.5.0      03/23/2021    Matt Weaver
            UPgrade conditional from 8 bits to 12 bits
            Move tpr_record to other package
            Added some tpr utilites and some fixes to sequence programming scripts
            Add timing mode selection to hps_peak
            Updates to test scripts during EIC/MPS testing

R1.4.1      11/30/2020    Kukhee Kim
            add exception handloing for individual register access

R1.4.0      05/13.2020    Kukhee Kim
            static build and force tagging

R1.4.0      01/29/2020    Kukhee Kim
            build with cpsw/framework R4.4.1 and bsa R1.2.0, buildroot-2019.08

R1.3.7      12/11/2019    Kukhee Kim
            build with cpsw/framework R4.3.1 and bsa R1.1.5

R1.3.6      09/20/2019    Kukhee Kim
            build with cpsw/framework R4.2.0 and bsa R1.1.4

R1.3.5      06/25/2019    Kukhee Kim
            build with cpsw/framework R4.1.2 and bsa R1.1.3
